--- a/src/Kiosk&TouchScreen/KioskHandling/KioskHandling.css
+++ b/src/Kiosk&TouchScreen/KioskHandling/KioskHandling.css
@@ -1,21 +1,19 @@
 
 
+.widthlisy {
+    visibility: hidden;
+}
+
  
   body {
     margin: 0;
    
   }
 
-  
-  
-  
 
 /* body::-webkit-scrollbar {
   display: none;
 } */
-
-
-
 
 
 .react-horizontal-scrolling-menu--scroll-container::-webkit-scrollbar {
