--- a/src/Kiosk&TouchScreen/OnBoarding/OnBoarding.css
+++ b/src/Kiosk&TouchScreen/OnBoarding/OnBoarding.css
@@ -13,7 +13,7 @@ margin: 0px 70px !important;
 
 font-style: normal;
 font-weight: 500;
-font-size: 40px;
+font-size: 16px;
 line-height: 47px;
 color: #515151;
 }
@@ -31,7 +31,7 @@ color: #515151;
 font-family: 'Gilroy';
 font-style: normal;
 font-weight: 600;
-font-size: 26px;
+font-size: 16px;
 line-height: 31px;
 color: #515151;
 }
@@ -40,13 +40,14 @@ color: #515151;
 font-family: 'Gilroy';
 font-style: normal;
 font-weight: 500;
-font-size: 20px;
+font-size: 16px;
 line-height: 150%;
 color: #888888;
 margin: 0;
 }
 img.img-fluid.number-align {
-  margin-left: -2.3rem;
+  margin-left: -1rem;
+  height: 45px;
 }
 .form-select {
 font-family: 'Gilroy';
@@ -66,8 +67,8 @@ border-radius: 15px !important;
   border-radius: 26px;
   padding-left: 0;
   padding-right: 32px;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 
 }
 .b-color {
@@ -77,7 +78,7 @@ radial-gradient(98.48% 326.98% at 0% 3.35%, rgba(255, 255, 255, 0.3) 0%, rgba(25
 linear-gradient(104.71deg, #FFFFFF 1.09%, rgba(255, 255, 255, 0) 100%);
 padding: 2px;
 border-radius: 26px;
-margin: 2rem 0rem;
+margin: 1rem 0rem;
 }
 
 .up-down-pdp {
@@ -223,12 +224,12 @@ height: 122px;
   /* 0% { transform: rotate(0deg);}
 100% { transform: rotate(360deg);} */
 }
-@media only screen and (max-device-width: 640px) {
+@media only screen and (max-device-width: 768px) {
   body {
     font-size: 20px;
   }
   .container-align {
-    margin: 0px 24px !important;
+    margin: 0px 10px !important;
 }
 .main-heading {
   font-size: 30px;
