--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -10,9 +10,9 @@ body {
   margin: 0px 70px !important;
   
 }
-.row.container-align {
+/* .row.container-align {
   height: 90vh;
-}
+} */
 .para1 {
   font-family: 'Gilroy';
   font-style: normal;
