--- a/src/Kiosk&TouchScreen/ExecutionPhase02/ExecutionPhase02.css
+++ b/src/Kiosk&TouchScreen/ExecutionPhase02/ExecutionPhase02.css
@@ -1,71 +1,64 @@
-body {
-    background: transparent !important;
+#gear {
+  animation: rotation 15s infinite linear;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
   }
-  .container-align {
-    margin: 0px 70px !important;
+
+  to {
+    transform: rotate(359deg);
   }
-  .main-heading {
-  
-  font-style: normal;
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 26px;
-  color: #515151;
+}
+#revgear {
+  animation: revgear 7s infinite linear;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+@keyframes revgear {
+  from {
+    transform: rotate(359deg);
   }
-  
-  .sub-heading {
-  font-family: 'Gilroy';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 30px;
-  line-height: 26px;
-  color: #515151;
+
+  to {
+    transform: rotate(0deg);
   }
-  
-  .partnership-content-head {
-  font-family: 'Gilroy';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 26px;
-  line-height: 26px;
-  color: #515151;
+}
+#bulb{
+  fill:rgb(236, 201, 83);
+  animation-name: glow;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+}
+
+#bulb-ray{
+  stroke:gray;
+}
+@keyframes glow {
+  0% {
+    fill-opacity: 0.25;
   }
-  
-  .partnership-content-para {
-  font-family: 'Gilroy';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 26px;
-  color: #888888;
-  margin: 0;
+  100% {
+    fill-opacity: 1
   }
-  
-  .form-select {
-  font-family: 'Gilroy';
-  font-style: normal;
-  font-weight: 500 !important;
-  font-size: 1.2rem !important;
-  line-height: 26px;
-  align-items: center;
-  /* color: #FFFFFF !important; */
-  text-align: center !important;
-  /* background: #0EC79B !important; */
-  border-radius: 15px !important;
-  }
-  
-  .partnership-content {
-  background: #fff;
-  padding: 30px 0px;
-  border-radius: 26px;
-  
-  }
-  .b-color {
-  background: radial-gradient(98.29% 354.82% at 98.29% 3.38%, #0EC79B 0%, rgba(57, 141, 238, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
-  radial-gradient(98.16% 354.35% at 98.16% 96.62%, #398DEE 0%, rgba(118, 123, 241, 0) 100%, rgba(57, 141, 238, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
-  radial-gradient(98.48% 326.98% at 0% 3.35%, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
-  linear-gradient(104.71deg, #FFFFFF 1.09%, rgba(255, 255, 255, 0) 100%);
-  padding: 2px;
-  border-radius: 26px;
-  margin: 2rem 0rem;
-  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
