--- a/src/Kiosk&TouchScreen/ExecutionPhase03/ExecutionPhase03.css
+++ b/src/Kiosk&TouchScreen/ExecutionPhase03/ExecutionPhase03.css
@@ -1,71 +1,63 @@
-body {
-    background: transparent !important;
+#handgear {
+  animation: handgear 1s infinite alternate;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+@keyframes handgear {
+  from {
+    transform: rotate(5deg);
   }
-  .container-align {
-    margin: 0px 70px !important;
+
+  to {
+    transform: rotate(0deg);
   }
-  .main-heading {
-  
-  font-style: normal;
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 47px;
-  color: #515151;
+}
+
+#righthand {
+  animation: up-down 1s infinite alternate;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+@keyframes up-down {
+  from {
+    transform: translateY(3px);
   }
-  
-  .sub-heading {
-  font-family: 'Gilroy';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 30px;
-  line-height: 35px;
-  color: #515151;
+
+  to {
+    transform: translateY(-3px);
   }
-  
-  .partnership-content-head {
-  font-family: 'Gilroy';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 26px;
-  line-height: 31px;
-  color: #515151;
+}
+
+#lefthand {
+  animation: lefthand 1s infinite alternate;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+@keyframes lefthand {
+  from {
+    transform: translateY(-2px);
   }
-  
-  .partnership-content-para {
-  font-family: 'Gilroy';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 150%;
-  color: #888888;
-  margin: 0;
+
+  to {
+    transform: translateY(5px);
   }
-  
-  .form-select {
-  font-family: 'Gilroy';
-  font-style: normal;
-  font-weight: 500 !important;
-  font-size: 1.2rem !important;
-  line-height: 35px !important;
-  align-items: center;
-  /* color: #FFFFFF !important; */
-  text-align: center !important;
-  /* background: #0EC79B !important; */
-  border-radius: 15px !important;
+}
+
+#revgear {
+  animation: revgear 7s infinite linear;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+@keyframes revgear {
+  from {
+    transform: rotate(359deg);
   }
-  
-  .partnership-content {
-  background: #fff;
-  padding: 30px 0px;
-  border-radius: 26px;
-  
+
+  to {
+    transform: rotate(0deg);
   }
-  .b-color {
-  background: radial-gradient(98.29% 354.82% at 98.29% 3.38%, #0EC79B 0%, rgba(57, 141, 238, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
-  radial-gradient(98.16% 354.35% at 98.16% 96.62%, #398DEE 0%, rgba(118, 123, 241, 0) 100%, rgba(57, 141, 238, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
-  radial-gradient(98.48% 326.98% at 0% 3.35%, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
-  linear-gradient(104.71deg, #FFFFFF 1.09%, rgba(255, 255, 255, 0) 100%);
-  padding: 2px;
-  border-radius: 26px;
-  margin: 2rem 0rem;
-  }
+}
