--- a/src/Kiosk&TouchScreen/KioskHandling/KioskHandling.css
+++ b/src/Kiosk&TouchScreen/KioskHandling/KioskHandling.css
@@ -1,3 +1,9 @@
+/* Christal */
+/* dummy test 09/05/2023 */
+
+
+
+
 .react-horizontal-scrolling-menu--scroll-container {
   background: transparent !important;
   height: 500px !important;
