--- a/src/Kiosk&TouchScreen/OnBoarding/OnBoarding.css
+++ b/src/Kiosk&TouchScreen/OnBoarding/OnBoarding.css
@@ -271,3 +271,104 @@ height: 122px;
 		padding: 0px !important;
 	}
 }
+
+/* Gear Rotation And Bulb Animation */
+
+#gear {
+  animation: rotation 15s infinite linear;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(359deg);
+  }
+}
+#revgear {
+  animation: revgear 7s infinite linear;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+@keyframes revgear {
+  from {
+    transform: rotate(359deg);
+  }
+
+  to {
+    transform: rotate(0deg);
+  }
+}
+#bulb{
+  fill:rgb(236, 201, 83);
+  animation-name: glow;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+}
+
+#bulb-ray{
+  stroke:gray;
+}
+@keyframes glow {
+  0% {
+    fill-opacity: 0.25;
+  }
+  100% {
+    fill-opacity: 1
+  }
+}
+
+#handgear {
+  animation: handgear 1s infinite alternate;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+@keyframes handgear {
+  from {
+    transform: rotate(5deg);
+  }
+
+  to {
+    transform: rotate(0deg);
+  }
+}
+
+#righthand {
+  animation: up-down 1s infinite alternate;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+@keyframes up-down {
+  from {
+    transform: translateY(3px);
+  }
+
+  to {
+    transform: translateY(-3px);
+  }
+}
+
+#lefthand {
+  animation: lefthand 1s infinite alternate;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+@keyframes lefthand {
+  from {
+    transform: translateY(-2px);
+  }
+
+  to {
+    transform: translateY(5px);
+  }
+}
