--- a/src/App.css
+++ b/src/App.css
@@ -84,12 +84,16 @@ color: #21272C;
 
 /* Laptop/ MAC */
 @media only screen and (min-device-width: 1025px) and (max-device-width: 1919px) {
+  body {
 
+  }
 }
 
 /* Desktop */
 @media only screen and (min-device-width: 1920px) {
-   
+  body {
+ 
+   }
 }
 
 /* .hide-root-font {
