--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 html {
-  background:  url("https://imgur.com/BdMue6b.png") no-repeat fixed center;}
+  background:  url("https://imgur.com/BdMue6b.png") no-repeat fixed center;};
+  
 
   body {
     background: transparent !important;
+    max-height: 100vh;
+    height: 100%;
+    overflow-y: hidden;
+    position: relative;
     font-family: -apple-system, BlinkMacSystemFont, Gilroy, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
