--- a/src/Mversion/MversionData/MversionData.css
+++ b/src/Mversion/MversionData/MversionData.css
@@ -124,7 +124,7 @@
     background: #0EC79B;
     border-radius: 49.801px;
     color: #fff;
-    font-family: 'Roboto';
+    font-family: 'Gilroy';
   font-style: normal;
   font-weight: 400;
   font-size: 13.1346px;
