--- a/src/Kiosk&TouchScreen/KioskHandling/KioskHandling.css
+++ b/src/Kiosk&TouchScreen/KioskHandling/KioskHandling.css
@@ -56,7 +56,7 @@ a.nav-link {
     font-size: 14px;
     line-height: 24px;
     color: #515151;
-    border: 0.5px solid #28ddb2 !important;
+    border: 0.2px solid #28ddb2 !important;
     margin-top: 25px;
 }
 
@@ -118,6 +118,7 @@ span.technology.badge.rounded-pill.mt-2 {
     text-align: left;
 }
 
+
 span.technology.badge.rounded-pill.ms-3 {
     padding: 8px 25px 8px 7px;
     width: auto;
@@ -138,6 +139,8 @@ span.technology.badge.rounded-pill.ms-3 {
     font-size: 16px;
     line-height: 26px;
     color: #515151;
+}.tab-pane{
+  background-color: white;
 }
 
   body {
@@ -282,12 +285,13 @@ span.carousel-control-next-icon {
 .progressindicator{
   background-color: #0EC79B;
   height: 5px;
+  transition: 0.5s ease;
 }
 .scroll-box{
   display: flex;
   flex-direction: row;
   width: 100%;
-  margin-top: 20px;
+  margin-top: 10%;
   /* background-color: #888888; */
 }
 .scroll-rl{
@@ -301,7 +305,7 @@ span.carousel-control-next-icon {
 .addant-progress-icon{
   position: absolute;
   right: 0;
-  margin-top: px;
+  /* margin-top: px; */
   margin-right: 5%;
  
 }
@@ -320,7 +324,7 @@ span.carousel-control-next-icon {
   position: relative;
 margin-top: -20px;
   right: 0;
-  margin-right: 13%;
+  /* margin-right: 13%; */
 margin-bottom: -100px;
   background-color: transparent;
   display: grid;
@@ -353,7 +357,11 @@ margin-bottom: -100px;
 }
 .circle-stroke{
   stroke: #0ec79b;
+ transition: 0.5s ease;
+
+ 
 }
 .circle-svg{
   background: transparent;
+
 }
