--- a/src/Mversion/Mversionenage/Mversionenage.css
+++ b/src/Mversion/Mversionenage/Mversionenage.css
@@ -148,8 +148,12 @@
 }
 .accordion-item:first-of-type {
  
- 
-  border-bottom-right-radius: 10px;
+  border-bottom-right-radius: 30px;
+  border-top-right-radius: 30px;
+}
+.accordion-item:not(:first-of-type) {
+  border-bottom-right-radius: 30px;
+  border-top-right-radius: 30px;
 }
 .accordion-body {
   background-color: #0EC79B;
