--- a/src/Mversion/MversionData/MversionData.css
+++ b/src/Mversion/MversionData/MversionData.css
@@ -21,6 +21,7 @@
   .accordion-body {
     background-color: #0EC79B;
     color: #fff;
+    border-bottom-right-radius: 30px;
   }
   /* .accordion-button::after {
   
@@ -134,4 +135,8 @@
   }
   .card {
     border-radius: 30px;
+}
+
+.accordion-item:first-of-type .accordion-button{
+  border-top-right-radius: 30px;
 }
