--- a/src/Mversion/MversionKiosk/MversionKiosk.css
+++ b/src/Mversion/MversionKiosk/MversionKiosk.css
@@ -17,7 +17,9 @@
   .accordion-button:not(.collapsed) {
     color: #fff !important;
     background-color: #0EC79B !important;
-    box-shadow: none !important; }
+    box-shadow: none !important; 
+    border-top-right-radius: 30px;
+  }
   .accordion-body {
     background-color: #0EC79B;
     color: #fff;
