--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -10,8 +10,8 @@ body {
   margin: 0px 70px !important;
   
 }
-.row.container-align {
-  height: 88vh;
+.homeHt {
+    height:100vh;
 }
 .para1 {
   font-family: 'Gilroy';
@@ -75,11 +75,27 @@ body {
     .container-align {
       margin: 0px 24px !important;
   }
+ 
      
   }
   
   /* Laptop/ MAC */
   @media only screen and (min-device-width: 1025px) and (max-device-width: 1919px) {
+    .ht-mdh {
+        height: 88vh;
+    }
+    .para1 {
+        color: #21272c;
+        font-size: 28px;
+        font-weight: 700;
+        line-height: 38px;
+    }
+    .para2 {
+        color: #767676;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 25px;
+    }
   
   }
   
