--- a/src/Kiosk&TouchScreen/OnBoarding/OnBoarding.css
+++ b/src/Kiosk&TouchScreen/OnBoarding/OnBoarding.css
@@ -253,7 +253,26 @@ height: 122px;
 
 }
 @media only screen and (min-device-width: 1025px) and (max-device-width: 1919px) {
+	.partnership-content {
+		background: #fff;
+		border-radius: 26px;
+		padding-left: 0;
+		padding-right: 32px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		border-top-left-radius: 0 !important;
+		border-bottom-left-radius: 0 !important;
+	}
 
+	.partnership-content-para {
+		font-size: 12px;
+		line-height: 17px;
+	}
+
+
+	p.partnership-content-head {
+		margin: 0 !important;
+	}
 }
 @media only screen and (min-device-width: 1920px) {
    
